Update CORS for production